tests/fixtures/valid/multi/unit_def_from_import_selective/src/app/main.gcl
// A local `unit` definition can reference a selectively imported unit (#822).
import app.units.{ mile };

unit halfmile: Length = 0.5 mile;

param a: Length = 1609.344 m;
node b: Length = @a -> halfmile;
