tests/fixtures/errors/at_in_fn.gcl
// Error: fn keyword is no longer supported
param x: Length = 1.0 m;

fn bad_fn(a: Length) -> Length = a + @x;
